--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -14,9 +14,10 @@
 
 .container_master {
   display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100vw;
   height: 100vh;
-  align-items: center;
 }
 .container_testimony {
   display: grid;
@@ -138,6 +139,10 @@ span:last-child {
 }
 /* responsive */
 @media (max-width: 66.25em) {
+  .container_master {
+    height: 100%;
+  }
+
   .container_testimony {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
